--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
-    "firebaseui": "^6.0.1"
+    "firebaseui": "^6.0.1",
+    "nodemon": "^1.3.3"
   }
 }
